--- a/hat-tip.css
+++ b/hat-tip.css
@@ -1,7 +1,7 @@
 #hattip{
 	position: fixed;
 	display: none;
-	bottom:-100px;
+	bottom:-150px;
 	max-height: 100px;
 	width: 100%;
 	background-color:rgba(12,21,38,0.90);
@@ -49,13 +49,16 @@
 	outline: none;
 }
 #hattip.fire{
-	bottom:0;
+	bottom:-1px;
 }
 #hattip.display{
 	display: block;
 }
 #hattip.ht-success{
 	background-color:rgba(6,134,134,0.95);
+}
+#hattip.ht-info{
+	background-color:rgba(13,202,240,0.95);
 }
 #hattip.ht-danger{
 	background-color:rgba(225,27,80,0.95);
